Fixed spacing with the switch theme button.

--- a/src/style.css
+++ b/src/style.css
@@ -384,6 +384,7 @@ h4 {
     background-color: #f00;
     color: #fff;
     padding: 10px 20px;
+    margin-top: 20px;
     text-decoration: none;
     border-radius: 5px;
     cursor: pointer;
